/**
 * Copyright 2013 David Rusek <dave dot rusek at gmail dot com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.robotninjas.barge.proto";

option java_outer_classname = "LogProto";

import "entry.proto";

message Append {
	required int64 index = 1;
	required Entry entry = 2;
}

message Vote {
	optional string voted_for = 2;
}

message Term {
	required int64 term = 1;
}

message Commit {
	required int64 index = 1;
}

message Snapshot {
	required int64 last_included_index = 1;
	required int64 last_included_term = 2;
	required string snapshot_file = 3;
}

message JournalEntry {
	optional Append append = 2;
	optional Vote vote = 4;
	optional Term term = 5;
	optional Commit commit = 6;
	optional Snapshot snapshot  = 7;
}